# RS_Py

./: .gitignore  README.md  requirements.txt
data/: info.csv  ratings.csv
data/ground_truth/: authors.csv  info.csv  ratings.csv
data/ground_truth_1/entries/: info.csv
data/ground_truth_2/: info.csv
data/ground_truth_2/entries/: authors.csv  ratings.csv
data/sample/: authors.csv  info.csv  ratings.csv  stats.csv
data/sample_days/: authors.csv  info.csv  ratings.csv  stats.csv
data/seed/seed_1/: authors.csv  info.csv  ratings.csv
data/seed_1/: info.csv
data/seed_1/p_1_beta/: authors.csv  info.csv  ratings.csv  stats.csv
data/seed_1/p_2_beta/: info.csv  ratings.csv
data/seed_1/p_3_beta/: authors.csv  info.csv
data/seed_2/: authors.csv  info.csv  ratings.csv  stats.csv
data/seed_3/: authors.csv  info.csv  ratings.csv
data/seed_4/: authors.csv  info.csv  ratings.csv
data/seed_power_law_1/: authors.csv  info.csv  ratings.csv  stats.csv
data/seed_shuffle_1/: authors.csv  info.csv  ratings.csv  stats.csv
data/seed_shuffle_1_special/: authors.csv  info.csv  ratings.csv  stats.csv
notebooks/: 1.Seed-Power-Law.ipynb  2.Readersourcing.ipynb  4.Experiments.ipynb  Experiments.ipynb  Readersourcing.ipynb  Readersourcing.py  ReadersourcingToolkit.py  Seeder.ipynb  Stats.ipynb  TrueReview.ipynb
scripts/: Experiments.py  Readersourcing.py  ReadersourcingParameters.py  ReadersourcingToolkit.py  Seeder.py  Stats.py  TrueReview.py
src/: Convert.py
utils/power-law/: CMakeLists.txt  README.md  example.ipynb  main.cc  utils.hpp
(+975 files in other folders)
